# SatisfyTheElements

./: credits.txt  readme.txt
Assets/: manifest.txt
Assets/Dialogue/: air_dialogue.txt  earth_dialogue.txt  example_dialogue.txt  fire_dialogue.txt  intro_dialogue.txt  water_dialogue.txt
Assets/Images/Elementals/: sketches.sai2
Assets/Images/Elementals/Air/: air.psd  air.sai2
Assets/Images/Elementals/Earth/: earth.psd  earth.sai2
Assets/Images/Elementals/Fire/: fire.psd  fire.sai2
Assets/Images/Elementals/Water/: water.psd  water.sai2
Trunk/: CMakeLists.txt
Trunk/include/STE/: Button.hpp  CherryBlossoms.hpp  ClientSelection.hpp  Date.hpp  Dialogue.hpp  Entity.hpp  Intro.hpp  Menu.hpp  Random.hpp  Result.hpp  STE.hpp  State.hpp
Trunk/src/: CMakeLists.txt
Trunk/src/STE/: Button.cpp  CMakeLists.txt  CherryBlossoms.cpp  ClientSelection.cpp  Date.cpp  Dialogue.cpp  Entity.cpp  Intro.cpp  Menu.cpp  Random.cpp  Result.cpp  STE.cpp  State.cpp  main.cpp
